--- a/html/components/component_input_text.html
+++ b/html/components/component_input_text.html
@@ -200,13 +200,14 @@
 				<dl>
 					<dt>inner label</dt>
 					<dd>
-						<div class="form">
+						<div class="form form-invalid">
 							<div class="label">예치금액 <span class="right">5억5000만원</span></div>
 							<div class="input-wrap input-placeholder">
 								<input type="number" class="ar" placeholder="금액입력" aria-label="예치금액">
 								<button type="button" class="input-remove" aria-label="입력 내용 삭제"></button>
 								<div class="visible-placeholder">원</div>
 							</div>
+							<p class="validate-text">필수 항목 입니다.</p>
 							<div class="shortcut-button-wrap">
 								<button type="button" class="btn-xsmall btn-outlined btn-round">+100만</button>
 								<button type="button" class="btn-xsmall btn-outlined btn-round">+500만</button>
@@ -293,7 +294,7 @@
 							<div class="input-wrap">
 								<input type="text" placeholder="Placeholder" value="Invalid">
 							</div>
-							<p class="validate-text">Invalid message</p>
+							<p class="validate-text">필수 항목 입니다.</p>
 						</div>
 					</dd>
 				</dl>
