--- a/html/components/component_list.html
+++ b/html/components/component_list.html
@@ -194,7 +194,7 @@
 				<h2>figure-list</h2>
 				<!-- figure-list -->
 				<div class="figure-list">
-					<ul>
+					<ul class="flex-wrap">
 						<li>
 							<figure>
 								<picture>
