--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -438,7 +438,7 @@ input:not([type="checkbox"],[type="radio"],[type="file"])[disabled] {color:var(-
 
 /* input-wrap has input-button */
 .input-wrap input {}
-.input-wrap button[class^="input-"] {flex:0 0 52px;width:52px;height:50px;opacity:0;transition:opacity 0.3s ease;
+.input-wrap button[class^="input-"] {flex:0 0 52px;width:52px;height:50px;opacity:0;transition:opacity 0.3s ease, flex 0.3s ease;
     -webkit-mask-position:center center;
     mask-position:center center;
     -webkit-mask-size:24px 24px;
@@ -452,7 +452,7 @@ input:not([type="checkbox"],[type="radio"],[type="file"])[disabled] {color:var(-
 .input-wrap input:not(:placeholder-shown) ~ button[class^="input-"] {opacity:1;z-index:1;}
 .input-wrap input:placeholder-shown ~ button.input-search,
 .input-wrap input:placeholder-shown ~ button.input-password {opacity:1;z-index:1;}
-.input-wrap:not(:focus-within) input:not(:placeholder-shown) ~ .input-remove{opacity:0;}
+.input-wrap:not(:focus-within) input:not(:placeholder-shown) ~ .input-remove{opacity:0;flex:0;}
 .input-wrap button.input-remove {flex:0 0 24px;width:24px;height:24px;-webkit-mask-image:url(/resources/images/btn/btn_close_small.svg);mask-image:url(/resources/images/btn/btn_close_small.svg);background-color:var(--icon-gray_2);}
 .input-wrap .input-search {-webkit-mask-image:url(/resources/images/btn/btn_search.svg);mask-image:url(/resources/images/btn/btn_search.svg);margin-right:-16px;}
 .input-wrap .input-password {-webkit-mask-image:url(/resources/images/btn/btn_password.svg);mask-image:url(/resources/images/btn/btn_password.svg);margin-right:-16px;}
@@ -670,15 +670,15 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .form .label {display:flex;align-items:center;justify-content:space-between;font-size:16px;font-weight:400;line-height:1.5;color:var(--typography-title);margin-bottom:8px;}
 .form .label .right {font-size:15px;font-weight:400;color:var(--typography-caption);line-height:1.6;}
 .form .label:empty {display:none;}
-.form .validate-text {font-size:15px;font-weight:400;color:var(--typography-caption);margin-top:2px;}
-.form .validate-text:empty {margin-top:0;}
+.form .validate-text {display:none;font-size:15px;font-weight:400;color:var(--typography-caption);margin-top:2px;}
+/* .form .validate-text:empty {margin-top:0;} */
 .form-invalid .input-wrap {border:1px solid var(--status-error);background-color:var(--background-bg_lightRed);}
 .form-invalid .input-wrap:focus-within {outline-color:var(--status-error);}
-.form-invalid .validate-text {color:var(--status-error);}
+.form-invalid .validate-text {display:block;color:var(--status-error);}
 
 .form-valid .input-wrap {border:1px solid var(--status-success);}
 .form-valid .input-wrap:focus-within {outline-color:var(--status-success);}
-.form-valid .validate-text {color:var(--status-success);}
+.form-valid .validate-text {display:block;color:var(--status-success);}
 .form + .form {margin-top:8px;}
 
 .form-invalid .inp-circle input {border-color:var(--red-100);}
@@ -750,7 +750,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .modal__content .tab-content .tab-col {border-bottom:0;}
 
 /* overflow-list */
-.overflow-list {display:flex!important;flex-wrap:nowrap!important;overflow-x:auto;scroll-snap-type:x mandatory;gap:6px;}
+.overflow-list {display:flex!important;flex-wrap:nowrap!important;overflow-x:auto;overflow-y:hidden;scroll-snap-type:x mandatory;gap:6px;}
 
 /* description */
 .description {position:relative;display:block;}
