--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -174,7 +174,7 @@
     --button-ghostw-enabled:#FFFFFF00;
     --button-ghostw-onDisabled:#FFFFFF3D;
     --button-ghostw-onEnabled:#FFFFFFF5;
-    --button-ghostw-pressed:FFFFFF29;
+    --button-ghostw-pressed:#FFFFFF29;
     --button-outlined-border:#0C0C0D1F;
     --button-outlined-disabled:#7786973D;
     --button-outlined-enabled:#FFFFFF;
@@ -565,7 +565,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 }
 
 /* chart-wrap */
-.chart-wrap {background-color:var(--background-bg_lightGray);border-radius:8px;}
+/* .chart-wrap {background-color:var(--background-bg_lightGray);border-radius:8px;} */
 
 /* main */
 .visual-headline {position:relative;height:203px;display:flex;align-items:flex-end;padding:0 4px 3px;}
@@ -596,13 +596,20 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .main-schedule-week .weekend:last-child {color:var(--blue-400);}
 .main-schedule-week li.today {color:var(--typography-white);}
 
+.main-schedule-detail {margin-bottom:16px;}
+.main-schedule-detail a {display:flex;justify-content:space-between;}
+.main-schedule-detail dl {flex:1;display:flex;align-items:center;gap:16px;}
+.main-schedule-detail dl dt {}
+.main-schedule-detail dl dd {display:flex;align-items:center;font-size:16px;font-weight:500;color:var(--typography-gray);}
+.main-schedule-detail dl dd strong {font-size:20px;font-weight:700;color:var(--typography-title);}
+
 .main-schedule-list {}
 .main-schedule-list:not(:last-child) {margin-bottom:16px;}
 .main-schedule-list ul {}
 .main-schedule-list ul li {}
 .main-schedule-list ul li:not(:last-child) {margin-bottom:8px;}
-.main-schedule-list ul li a {position:relative;display:flex;padding:12px 32px 12px 12px;background-color:var(--surface-surface50);border-radius:12px;gap:8px;}
-.main-schedule-list ul li a:after {content:'';position:absolute;right:12px;top:50%;margin-top:-10px;align-items:center;justify-content:center;flex:0 0 10px;width:10px;height:20px;
+.main-schedule-list ul li a {position:relative;display:flex;padding: 8px 22px 8px 8px;background-color:var(--surface-surface50);border-radius:12px;gap:8px;}
+.main-schedule-list ul li a:after {content:'';position:absolute;right:12px;top:50%;margin-top:-7px;align-items:center;justify-content:center;flex:0 0 7px;width:7px;height:14px;
     -webkit-mask-position:center center;
     mask-position:center center;
     -webkit-mask-size:contain;
@@ -611,13 +618,14 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
     mask-repeat:no-repeat;
     -webkit-mask-image:url(/resources/images/arrow/ico_chevron.svg);
     mask-image:url(/resources/images/arrow/ico_chevron.svg);
-    background-color:var(--icon-gray_1);
+    background-color:var(--icon-gray_2);
 }
-.main-schedule-list .tag-wrap {}
+.main-schedule-list .tag-wrap {flex:0 0 68px;text-align:center;font-size:14px;color:var(--typography-gray);font-weight:500;}
 .main-schedule-list .schedule-title {display:flex;flex-wrap:wrap;}
-.main-schedule-list .schedule-title-inner {display:flex;}
-.main-schedule-list .schedule-title .title-small {display:grid;}
-.main-schedule-list .schedule-title .title-small span {white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.main-schedule-list .schedule-title-inner {display:flex;gap:4px;}
+.main-schedule-list .schedule-title .body-small {display:grid;}
+.main-schedule-list .schedule-title .body-small span {white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.main-schedule-list .schedule-title .body-small strong {}
 .main-schedule-list .schedule-title .value {white-space:nowrap;}
 
 .main-stock-section {padding:40px 0;background-color:var(--background-bg_lightGray);}
