--- a/resources/css/ui-style.css
+++ b/resources/css/ui-style.css
@@ -257,7 +257,7 @@
 .btn-large {display:inline-flex;align-items:center;justify-content:center;height:52px;font-size:20px;border-width:1px;border-radius:8px;padding:16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
 .btn-medium {display:inline-flex;align-items:center;justify-content:center;height:48px;font-size:18px;border-width:1px;border-radius:8px;padding:14px 16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
 .btn-small {display:inline-flex;align-items:center;justify-content:center;height:40px;font-size:18px;border-width:1px;border-radius:8px;padding:12px 16px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
-.btn-xsmall {display:inline-flex;align-items:center;justify-content:center;height:32px;font-size:16px;border-width:1px;border-radius:8px;padding: 6px 14px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
+.btn-xsmall {display:inline-flex;align-items:center;justify-content:center;height:32px;font-size:16px;border-width:1px;border-radius:8px;padding:6px 14px;white-space:nowrap;text-align:center;vertical-align:top;gap:4px;line-height:18px;}
 .btn-large,
 .btn-medium,
 .btn-small,
@@ -348,9 +348,9 @@ div.btn-xsmall .btn-inner span {white-space:nowrap;overflow:hidden;text-overflow
 .anchor.chevron.fc-status-active:after {background-color:var(--status-active);}
 
 /* fab */
-.fab {display:flex;width:54px;height:54px;box-shadow: 0px 6px 24px -8px var(--shadow-gray_3);backdrop-filter:blur(8px);align-items:center;justify-content:center;}
+.fab {display:flex;width:54px;height:54px;box-shadow:0px 6px 24px -8px var(--shadow-gray_3);backdrop-filter:blur(8px);align-items:center;justify-content:center;}
 .fab-primary {background-color:var(--brandPrimary-blue500);}
-.fab-secondary {background-color:var(--white-80);border:1px solid var(--border-8);box-shadow: 0px 2px 10px 0px var(--shadow-gray_2);}
+.fab-secondary {background-color:var(--white-80);border:1px solid var(--border-8);box-shadow:0px 2px 10px 0px var(--shadow-gray_2);}
 .fab-square {border-radius:12px;}
 .fab-circle {border-radius:54px;}
 
@@ -588,7 +588,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .inp-toggle input {position:relative;display:flex;flex:0 0 42px;width:42px;height:24px;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;background-color:var(--gray-400);border-radius:42px;transition:background-color 0.15s ease;}
 .inp-toggle input:before {content:'';position:absolute;left:3px;top:3px;width:18px;height:18px;background-color:var(--basic-white);filter:drop-shadow(0px 0px 4px var(--shadow-gray_3));border-radius:18px;transition:left 0.15s ease;}
 .inp-toggle input:checked {background-color:var(--brandPrimary-blue500);}
-.inp-toggle input:checked:before {left: calc(100% - 21px);}
+.inp-toggle input:checked:before {left:calc(100% - 21px);}
 
 /* inp-toggle-large */
 .inp-toggle-large label {display:flex;align-items:center;gap:8px;}
@@ -596,14 +596,14 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .inp-toggle-large input {position:relative;display:flex;flex:0 0 58px;width:58px;height:32px;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;background-color:var(--gray-400);border-radius:58px;transition:background-color 0.15s ease;}
 .inp-toggle-large input:before {content:'';position:absolute;left:4px;top:4px;width:24px;height:24px;background-color:var(--basic-white);filter:drop-shadow(0px 0px 4px var(--shadow-gray_3));border-radius:18px;transition:left 0.15s ease;}
 .inp-toggle-large input:checked {background-color:var(--brandPrimary-blue500);}
-.inp-toggle-large input:checked:before {left: calc(100% - 28px);}
+.inp-toggle-large input:checked:before {left:calc(100% - 28px);}
 
 .inp-toggle-inner-text label {display:flex;align-items:center;gap:8px;}
 .inp-toggle-inner-text input {position:relative;display:flex;height:32px;appearance:none;-webkit-appearance:none;border:0;cursor:inherit;background-color:var(--gray-400);border-radius:68px;transition:background-color 0.15s ease;}
 .inp-toggle-inner-text input:before {content:'';position:absolute;left:4px;top:4px;width:24px;height:24px;background-color:var(--basic-white);filter:drop-shadow(0px 0px 4px var(--shadow-gray_3));border-radius:24px;transition:left 0.15s ease;}
 .inp-toggle-inner-text input:after {content:attr(data-label);padding:0 9px 0 34px;font-size:14px;font-weight:400;color:var(--typography-white);display:flex;align-items:center;transition:padding 0.3s ease;}
 .inp-toggle-inner-text input:checked {background-color:var(--brandPrimary-blue500);}
-.inp-toggle-inner-text input:checked:before {left: calc(100% - 28px);}
+.inp-toggle-inner-text input:checked:before {left:calc(100% - 28px);}
 .inp-toggle-inner-text input:checked:after {content:attr(data-label-checked);padding:0 34px 0 9px;}
 
 /* inp-toggle-group */
@@ -724,7 +724,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .tab-content .tab-button {display:flex;padding:2px;background-color:var(--surface-surface50);border-radius:8px;gap:0;}
 .tab-content .tab-button li {flex:1;}
 .tab-content .tab-button li button,
-.tab-content .tab-button li a {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;width:100%;appearance:none;-webkit-appearance:none;border:0;text-align:center;padding:0 8px;font-size:16px;font-weight:400;color:var(--typography-gray);line-height:44px;min-height: 44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;height: 100%;}
+.tab-content .tab-button li a {position:relative;display:flex;align-items:center;justify-content:center;flex:1 1 100%;width:100%;appearance:none;-webkit-appearance:none;border:0;text-align:center;padding:0 8px;font-size:16px;font-weight:400;color:var(--typography-gray);line-height:44px;min-height:44px;border-radius:8px;background-color:transparent;transition:background-color 0.15s ease;height:100%;}
 .tab-content .tab-button li button:after,
 .tab-content .tab-button li a:after {content:'';position:absolute;left:0;top:50%;width:1px;height:14px;background-color:var(--border-8);margin-top:-7px;}
 .tab-content .tab-button li.tab-active button,
@@ -751,6 +751,9 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 
 /* overflow-list */
 .overflow-list {display:flex!important;flex-wrap:nowrap!important;overflow-x:auto;overflow-y:hidden;scroll-snap-type:x mandatory;gap:6px;}
+.overflow-list::-webkit-scrollbar {
+	display:none;
+}
 
 /* description */
 .description {position:relative;display:block;}
@@ -811,7 +814,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .description.ar {margin-left:auto;display:table;}
 
 /* tags */
-.tags {display:inline-flex;vertical-align:top;white-space:nowrap;align-items: center;gap: 2px;}
+.tags {display:inline-flex;vertical-align:top;white-space:nowrap;align-items:center;gap:2px;}
 .tags-small {font-size:15px;font-weight:500;line-height:1;padding:4px 8px;border-radius:4px;}
 .tags-medium {font-size:16px;font-weight:500;line-height:1;padding:8px 12px;border-radius:8px;}
 .tags-large {font-size:18px;font-weight:500;line-height:1;padding:10px 12px;border-radius:8px;}
@@ -1189,6 +1192,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 .table-col table .caption-visible {font-size:14px;font-weight:400;color:var(--typography-caption);text-align:left;background-color:inherit;}
 
 .table-row {overflow-x:auto;}
+.table-row::-webkit-scrollbar {display:none;}
 .table-row table {table-layout:fixed;}
 .table-row table th {font-size:16px;font-weight:500;color:var(--typography-black);text-align:left;padding:12px 8px;}
 .table-row table td {font-size:16px;font-weight:400;color:var(--typography-body);text-align:left;padding:12px 8px;}
@@ -1200,6 +1204,7 @@ input[type="checkbox"].type-eu:checked {background:url(/resources/images/form/fo
 
 .table-inner {}
 .overflow-visible {position:relative;display:flex;overflow-x:auto;scroll-snap-type:x mandatory;}
+.overflow-visible::-webkit-scrollbar {display:none;}
 .overflow-visible table {min-width:768px;padding:0 24px;}
 .overflow-visible:after {content:'';width:10px;background:url(/resources/images/arrow/arrow_date_next.svg) center center / 10px 20px no-repeat, linear-gradient(90deg, rgba(255, 255, 255, 0.00) 0%, #FFF 100%);position:sticky;right:0;top:0;display:flex;flex:0 0 60px;margin-left:-60px;opacity:1;transition:opacity 0.3s ease;}
 .overflow-visible.scroll-end:after {opacity:0;}
