--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -378,7 +378,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 /* datepicker-wrap */
 .datepicker-wrap {}
-.datepicker-wrap .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:456px;position:relative;overflow:hidden;}
+.datepicker-wrap .ui-widget.ui-widget-content {border:0;background-color:var(--white-100);color:var(--typography-black);border-radius:0;font-family:inherit;font-size:inherit;width:auto;padding:16px 0 0;height:auto;position:relative;overflow:hidden;}
 .datepicker-wrap .ui-datepicker .ui-datepicker-header {padding:0;border-radius:0;border:0;background-color:var(--white-100);margin-bottom:20px;font-size:26px;font-weight:500;color:var(--typography-black);}
 .datepicker-wrap .ui-datepicker .ui-datepicker-prev,
 .datepicker-wrap .ui-datepicker .ui-datepicker-next {top:0;width:52px;height:52px;background-color:var(--surface-surface50);border-radius:50%;display:flex;align-items:center;justify-content:center;}
