--- a/resources/css/ui-default.css
+++ b/resources/css/ui-default.css
@@ -143,6 +143,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mt2 {margin-top:2px!important;}
 .mt4 {margin-top:4px!important;}
 .mt5 {margin-top:5px!important;}
+.mt6 {margin-top:6px!important;}
 .mt8 {margin-top:8px!important;}
 .mt10 {margin-top:10px!important;}
 .mt12 {margin-top:12px!important;}
@@ -167,6 +168,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mb2 {margin-bottom:2px!important;}
 .mb4 {margin-bottom:4px!important;}
 .mb5 {margin-bottom:5px!important;}
+.mb6 {margin-bottom:6px!important;}
 .mb8 {margin-bottom:8px!important;}
 .mb10 {margin-bottom:10px!important;}
 .mb12 {margin-bottom:12px!important;}
@@ -190,6 +192,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .ml2 {margin-left:2px!important;}
 .ml4 {margin-left:4px!important;}
 .ml5 {margin-left:5px!important;}
+.ml6 {margin-left:6px!important;}
 .ml8 {margin-left:8px!important;}
 .ml10 {margin-left:10px!important;}
 .ml12 {margin-left:12px!important;}
@@ -212,6 +215,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mr2 {margin-right:2px!important;}
 .mr4 {margin-right:4px!important;}
 .mr5 {margin-right:5px!important;}
+.mr6 {margin-right:6px!important;}
 .mr8 {margin-right:8px!important;}
 .mr10 {margin-right:10px!important;}
 .mr12 {margin-right:12px!important;}
@@ -233,6 +237,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .m0 {margin:0px!important;}
 .m4 {margin:4px!important;}
 .m5 {margin:5px!important;}
+.m6 {margin:6px!important;}
 .m8 {margin:8px!important;}
 .m10 {margin:10px!important;}
 .m12 {margin:12px!important;}
@@ -253,6 +258,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .my0 {margin-top:0px!important;margin-bottom:0px!important;}
 .my4 {margin-top:4px!important;margin-bottom:4px!important;}
 .my5 {margin-top:5px!important;margin-bottom:5px!important;}
+.my6 {margin-top:6px!important;margin-bottom:6px!important;}
 .my8 {margin-top:8px!important;margin-bottom:8px!important;}
 .my10 {margin-top:10px!important;margin-bottom:10px!important;}
 .my12 {margin-top:12px!important;margin-bottom:12px!important;}
@@ -274,6 +280,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mx0 {margin-left:0px!important;margin-right:0px!important;}
 .mx4 {margin-left:4px!important;margin-right:4px!important;}
 .mx5 {margin-left:5px!important;margin-right:5px!important;}
+.mx6 {margin-left:6px!important;margin-right:6px!important;}
 .mx8 {margin-left:8px!important;margin-right:8px!important;}
 .mx10 {margin-left:10px!important;margin-right:10px!important;}
 .mx12 {margin-left:12px!important;margin-right:12px!important;}
@@ -295,6 +302,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mt-2 {margin-top:-2px!important;}
 .mt-4 {margin-top:-4px!important;}
 .mt-5 {margin-top:-5px!important;}
+.mt-6 {margin-top:-6px!important;}
 .mt-8 {margin-top:-8px!important;}
 .mt-10 {margin-top:-10px!important;}
 .mt-12 {margin-top:-12px!important;}
@@ -317,6 +325,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mb-2 {margin-bottom:-2px!important;}
 .mb-4 {margin-bottom:-4px!important;}
 .mb-5 {margin-bottom:-5px!important;}
+.mb-6 {margin-bottom:-6px!important;}
 .mb-8 {margin-bottom:-8px!important;}
 .mb-10 {margin-bottom:-10px!important;}
 .mb-12 {margin-bottom:-12px!important;}
@@ -335,31 +344,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mb-70 {margin-bottom:-70px!important;}
 .mb-100 {margin-bottom:-100px!important;}
 
-.mlauto {margin-left:auto!important;}
-.ml0 {margin-left:0px!important;}
-.ml2 {margin-left:2px!important;}
-.ml4 {margin-left:4px!important;}
-.ml5 {margin-left:5px!important;}
-.ml8 {margin-left:8px!important;}
-.ml10 {margin-left:10px!important;}
-.ml12 {margin-left:12px!important;}
-.ml15 {margin-left:15px!important;}
-.ml16 {margin-left:16px!important;}
-.ml20 {margin-left:20px!important;}
-.ml24 {margin-left:24px!important;}
-.ml25 {margin-left:25px!important;}
-.ml30 {margin-left:30px!important;}
-.ml32 {margin-left:32px!important;}
-.ml35 {margin-left:35px!important;}
-.ml40 {margin-left:40px!important;}
-.ml45 {margin-left:45px!important;}
-.ml50 {margin-left:50px!important;}
-.ml70 {margin-left:70px!important;}
-.ml100 {margin-left:100px!important;}
-
 .ml-2 {margin-left:-2px!important;}
 .ml-4 {margin-left:-4px!important;}
 .ml-5 {margin-left:-5px!important;}
+.ml-6 {margin-left:-6px!important;}
 .ml-8 {margin-left:-8px!important;}
 .ml-10 {margin-left:-10px!important;}
 .ml-12 {margin-left:-12px!important;}
@@ -377,31 +365,10 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .ml-70 {margin-left:-70px!important;}
 .ml-100 {margin-left:-100px!important;}
 
-.mrauto {margin-right:auto!important;}
-.mr0 {margin-right:0px!important;}
-.mr2 {margin-right:2px!important;}
-.mr4 {margin-right:4px!important;}
-.mr5 {margin-right:5px!important;}
-.mr8 {margin-right:8px!important;}
-.mr10 {margin-right:10px!important;}
-.mr12 {margin-right:12px!important;}
-.mr15 {margin-right:15px!important;}
-.mr16 {margin-right:16px!important;}
-.mr20 {margin-right:20px!important;}
-.mr24 {margin-right:24px!important;}
-.mr25 {margin-right:25px!important;}
-.mr30 {margin-right:30px!important;}
-.mr32 {margin-right:32px!important;}
-.mr35 {margin-right:35px!important;}
-.mr40 {margin-right:40px!important;}
-.mr45 {margin-right:45px!important;}
-.mr50 {margin-right:50px!important;}
-.mr70 {margin-right:70px!important;}
-.mr100 {margin-right:100px!important;}
-
 .mr-2 {margin-right:-2px!important;}
 .mr-4 {margin-right:-4px!important;}
 .mr-5 {margin-right:-5px!important;}
+.mr-6 {margin-right:-6px!important;}
 .mr-8 {margin-right:-8px!important;}
 .mr-10 {margin-right:-10px!important;}
 .mr-12 {margin-right:-12px!important;}
@@ -422,6 +389,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .my-0 {margin-top:-0px!important;margin-bottom:-0px!important;}
 .my-4 {margin-top:-4px!important;margin-bottom:-4px!important;}
 .my-5 {margin-top:-5px!important;margin-bottom:-5px!important;}
+.my-6 {margin-top:-6px!important;margin-bottom:-6px!important;}
 .my-8 {margin-top:-8px!important;margin-bottom:-8px!important;}
 .my-10 {margin-top:-10px!important;margin-bottom:-10px!important;}
 .my-12 {margin-top:-12px!important;margin-bottom:-12px!important;}
@@ -443,6 +411,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .mx-0 {margin-left:-0px!important;margin-right:-0px!important;}
 .mx-4 {margin-left:-4px!important;margin-right:-4px!important;}
 .mx-5 {margin-left:-5px!important;margin-right:-5px!important;}
+.mx-6 {margin-left:-6px!important;margin-right:-6px!important;}
 .mx-8 {margin-left:-8px!important;margin-right:-8px!important;}
 .mx-10 {margin-left:-10px!important;margin-right:-10px!important;}
 .mx-12 {margin-left:-12px!important;margin-right:-12px!important;}
@@ -464,6 +433,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pt0 {padding-top:0px!important;}
 .pt4 {padding-top:4px!important;}
 .pt5 {padding-top:5px!important;}
+.pt6 {padding-top:6px!important;}
 .pt8 {padding-top:8px!important;}
 .pt10 {padding-top:10px!important;}
 .pt12 {padding-top:12px!important;}
@@ -485,6 +455,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pb0 {padding-bottom:0px!important;}
 .pb4 {padding-bottom:4px!important;}
 .pb5 {padding-bottom:5px!important;}
+.pb6 {padding-bottom:6px!important;}
 .pb8 {padding-bottom:8px!important;}
 .pb10 {padding-bottom:10px!important;}
 .pb12 {padding-bottom:12px!important;}
@@ -506,6 +477,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pl0 {padding-left:0px!important;}
 .pl4 {padding-left:4px!important;}
 .pl5 {padding-left:5px!important;}
+.pl6 {padding-left:6px!important;}
 .pl8 {padding-left:8px!important;}
 .pl10 {padding-left:10px!important;}
 .pl12 {padding-left:12px!important;}
@@ -527,6 +499,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .pr0 {padding-right:0px!important;}
 .pr4 {padding-right:4px!important;}
 .pr5 {padding-right:5px!important;}
+.pr6 {padding-right:6px!important;}
 .pr8 {padding-right:8px!important;}
 .pr10 {padding-right:10px!important;}
 .pr12 {padding-right:12px!important;}
@@ -548,6 +521,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 .p0 {padding:0px!important;}
 .p4 {padding:4px!important;}
 .p5 {padding:5px!important;}
+.p6 {padding:6px!important;}
 .p8 {padding:8px!important;}
 .p10 {padding:10px!important;}
 .p12 {padding:12px!important;}
@@ -569,6 +543,7 @@ body {word-break:break-word;font-size:14px;line-height:1.6;font-family:'Pretenda
 
 .py0 {padding-top:0px!important;padding-bottom:0px!important;}
 .py4 {padding-top:4px!important;padding-bottom:4px!important;}
+.py5 {padding-top:5px!important;padding-bottom:5px!important;}
 .py5 {padding-top:5px!important;padding-bottom:5px!important;}
 .py6 {padding-top:6px!important;padding-bottom:6px!important;}
 .py8 {padding-top:8px!important;padding-bottom:8px!important;}
