--- a/html/components/component_alert.html
+++ b/html/components/component_alert.html
@@ -65,7 +65,7 @@
 		<div class="ui-guide-section">
 			<div class="ui-guide-box">
 				<div class="guide-column-list">
-					<button type="button" class="btn-large btn-primary" onclick="$swal.fire01('삭제하시겠습니까', '예', true, '아니요');">Alert1</button>
+					<button type="button" class="btn-large btn-primary" onclick="$swal.fire01('삭제하시겠\n습니까', '예', true, '아니요');">Alert1</button>
 					<button type="button" class="btn-large btn-primary" onclick="$swal.fire02('등록하시겠습니까', 'success', '예',  true, '아니요');">등록 & 확인 & 정보성 문구</button>
 					<button type="button" class="btn-large btn-primary" onclick="$swal.fire02('삭제하시겠습니까', 'caution', '예',  true, '아니요');">삭제 & 수정 & 경고 & 주의 문구</button>
 					<button type="button" class="btn-large btn-primary" onclick="$swal.fire03('삭제하시겠습니까', '예', true, '아니요')">Alert3</button>
