--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -496,3 +496,15 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
     from {transform:translateX(100%);}
     to {transform:translateX(0);opacity:1;}
 }
+
+.swiper-pagination.swiper-pagination-tab {position:relative;display:flex;z-index:var(--tab-zIndex);gap:8px;border-bottom:1px solid var(--border-8);background-color:var(--white-100);bottom:auto;top:auto;left:auto;width:auto;}
+.swiper-horizontal>.swiper-pagination-bullets.swiper-pagination-tab .swiper-pagination-bullet, .swiper-pagination-horizontal.swiper-pagination-bullets.swiper-pagination-tab .swiper-pagination-bullet {margin:auto;background:none;height:auto;opacity:1;}
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet {display:flex;flex:1;position:relative;padding:0 10px;width:100%;}
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet button,
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet a {position:relative;display:flex;font-size:18px;font-weight:400;line-height:50px;align-items:center;justify-content:center;color:var(--typography-gray);width:100%;padding:0 6px;white-space:nowrap;}
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet button:before,
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet a:before {content:'';position:absolute;left:0px;right:0px;bottom:0;height:3px;background-color:transparent;transition:background-color 0.3s ease;}
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet.swiper-pagination-bullet-active a,
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet.swiper-pagination-bullet-active button {color:var(--typography-title);font-weight:700;}
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet.swiper-pagination-bullet-active a:before,
+.swiper-pagination.swiper-pagination-tab .swiper-pagination-bullet.swiper-pagination-bullet-active button:before {background-color:var(--border-72);}
