--- a/resources/css/ui-content.css
+++ b/resources/css/ui-content.css
@@ -130,7 +130,7 @@
 
 /* bs-card */
 .bs-card-wrap {position:relative;}
-.bs-card-wrap input[type="radio"] {appearance:none;-webkit-appearance:none;position:absolute;left:0;top:0;width:100%;height:100%;z-index:1;}
+.bs-card-wrap input[type="radio"] {appearance:none;-webkit-appearance:none;position:absolute;left:0;top:0;width:100%;height:100%;z-index:1;opacity:0;}
 .bs-card-wrap input[type="radio"]:checked ~ .bs-card {box-shadow:0px 0px 2px 2px var(--status-focused)}
 .bs-card {position:relative;border-radius:8px;border:1px solid var(--border-8);box-shadow:0px 0.5px 0px 0px var(--shadow-gray_1), 0px 2px 4px -1px var(--shadow-gray_1);-webkit-text-size-adjust:auto;transition:box-shadow 0.3s ease;}
 .bs-card .bs-typeA {background-color:var(--background-bg_lightGray);border-radius:inherit;}
@@ -169,8 +169,8 @@
 .bs-card .contact .row .td {display:table-cell;font-size:9px;font-weight:500;line-height:1.3;color:var(--typography-body);text-align:right;}
 .bs-card .contact .row:not(:last-child) .th,
 .bs-card .contact .row:not(:last-child) .td {border-bottom:2px solid transparent;}
-.bs-card .bottom {padding:8px 12px;background-color:var(--surface-surface100);border-radius:0 0 8px 8px;}
-.bs-card .bottom ul {display:flex;gap:10px;flex-wrap:wrap;}
+.bs-card .bottom {padding:8px 12px;background-color:var(--surface-surface100);border-radius:0 0 8px 8px;min-height:26px;}
+.bs-card .bottom ul {display:flex;gap:2px 6px;flex-wrap:wrap;}
 .bs-card .bottom ul li {font-size:8px;font-weight:400;color:var(--typography-gray);line-height:1.3;}
 
 .bs-card figure picture {display:flex;width:46px;height:59px;align-items:center;justify-content:center;}
