--- a/html/components/component_input_checkbox.html
+++ b/html/components/component_input_checkbox.html
@@ -226,7 +226,7 @@
 					<div class="inp-group">
 						<div class="inp inp-medium">
 							<label>
-								<input type="checkbox" class="type-red">
+								<input type="checkbox" class="type-yellow">
 								<span class="label-title">개인 일정</span>
 							</label>
 						</div>
