--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -273,8 +273,8 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 .micromodal-content .modal__overlay {background-color:transparent;}
 
-.modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);border-radius:20px 20px 0 0;}
-.modal__header__alert {padding:24px 24px 8px;min-height:40px;gap:10px;}
+.modal__header {position:sticky;top:0;left:0;width:100%;padding:14.5px 16px;background-color:var(--white-100);border-radius:20px 20px 0 0;min-height:59px;}
+.modal__header__alert {padding:24px 24px 8px;min-height:56px;gap:10px;}
 .modal__header .modal__title {flex:1 1 100%;display:flex;justify-content:center;min-height:30px;}
 .modal__header .modal__close {position:absolute;right:0;top:0;width:24px;height:24px;padding:14.5px 16px;display:flex;align-items:center;justify-content:center;box-sizing:content-box;}
 .modal__header .modal__close:before {content:'';flex:0 0 24px;width:24px;height:24px;background:url(/resources/images/ico/ico_close.svg) center center / contain no-repeat;display:block;}
@@ -440,7 +440,7 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 .datepicker-wrap tbody .ui-datepicker-week-end:last-child {color:var(--blue-400);}
 .schedule-wrap {position:absolute;left:0;bottom:1px;width:100%;height:6px;display:flex;align-items:center;justify-content:center;gap:2px;}
 .schedule-wrap .sc-label {flex:0 0 6px;width:6px;height:6px;border-radius:50%;}
-.sc-label.label01 {background-color:var(--red-500);}
+.sc-label.label01 {background-color:var(--yellow-700);}
 .sc-label.label02 {background-color:var(--cyan-500);}
 .sc-label.label03 {background-color:var(--purple-500);}
 .sc-label.label04 {background-color:var(--gray-900);}
