--- a/resources/css/ui-plugins.css
+++ b/resources/css/ui-plugins.css
@@ -309,21 +309,36 @@ div:where(.swal2-container) button:where(.swal2-close):hover {}
 
 /* .micromodal-slide-dropdown .modal__container {position:absolute;background-color:var(--white);padding:10px 24px;border-radius:12px;} */
 .micromodal-slide-left[aria-hidden="false"] .modal__overlay {
-    animation:mmfadeLeftIn .3s cubic-bezier(0.0, 0.0, 0.2, 1);
+    animation:mmfadeLeftIn .5s cubic-bezier(0.0, 0.0, 0.2, 1);
 }
 
 .micromodal-slide-left[aria-hidden="false"] .modal__container {
-    animation:mmslideLeftIn .3s cubic-bezier(0, 0, .2, 1);
+    animation:mmslideLeftIn .5s cubic-bezier(0, 0, .2, 1);
 }
 
 .micromodal-slide-left[aria-hidden="true"] .modal__overlay {
-    animation:mmfadeLeftOut .3s cubic-bezier(0.0, 0.0, 0.2, 1);
+    animation:mmfadeLeftOut .5s cubic-bezier(0.0, 0.0, 0.2, 1);
 }
 
 .micromodal-slide-left[aria-hidden="true"] .modal__container {
-    animation:mmslideLeftOut .3s cubic-bezier(0, 0, .2, 1);
+    animation:mmslideLeftOut .5s cubic-bezier(0, 0, .2, 1);
 }
 
+.micromodal-slide[aria-hidden="false"] .modal__overlay {
+    animation: mmfadeIn .5s cubic-bezier(0.0, 0.0, 0.2, 1);
+}
+
+.micromodal-slide[aria-hidden="false"] .modal__container {
+    animation: mmslideIn .5s cubic-bezier(0, 0, .2, 1);
+}
+
+.micromodal-slide[aria-hidden="true"] .modal__overlay {
+    animation: mmfadeOut .5s cubic-bezier(0.0, 0.0, 0.2, 1);
+}
+
+.micromodal-slide[aria-hidden="true"] .modal__container {
+    animation: mmslideOut .5s cubic-bezier(0, 0, .2, 1);
+}
 @keyframes mmslideIn {
     from {transform:translateY(5%);}
     to {transform:translateY(0);}
