--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -527,9 +527,9 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 [data-scroll-direction="UP"] .sticky-content {position:sticky;}
 
 /* snackbar-content */
-.snackbar-content {position:fixed;transition:bottom 0.3s ease,opacity 0.3s ease;bottom:0px;right:0;opacity:0;z-index:-1;display:flex;flex-direction:column;gap:14px;padding:14px;}
+.snackbar-content {position:fixed;transition:bottom 0.3s ease,right 0.3s ease,opacity 0.3s ease,transform 0.3s ease;bottom:-10px;right:-10px;opacity:0;z-index:-1;display:flex;flex-direction:column;gap:14px;padding:14px;transform:scale(0);}
 .snackbar-content .snackbar-content-inner {position:relative;border-radius:8px;background-color:var(--white-100);padding:14px 20px;box-shadow:0px -2px 40px -1px var(--shadow-gray_3);margin:-14px;}
-.snackbar-content.is-sticky {position:fixed;bottom:0;right:0;z-index:var(--sticky-zIndex);opacity:1;}
+.snackbar-content.is-sticky {position:fixed;bottom:0;right:0;z-index:var(--sticky-zIndex);opacity:1;transform:scale(1);}
 .snackbar-content .snackbar-content-close {position:absolute;width:28px;height:28px;top:12px;right:12px;
     -webkit-mask-position:center center;
     mask-position:center center;
