--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -524,7 +524,7 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 /* sticky-content */
 .sticky-content {padding:8px 0;}
 .sticky-content {position:static;background-color:var(--white-100);z-index:var(--sticky-zIndex);top:0;transition:top 0.3s ease;}
-[data-scroll-direction="UP"] .sticky-content {position:sticky;}
+[data-scroll-direction="UP"] main .sticky-content {position:sticky;}
 
 /* snackbar-content */
 .snackbar-content {position:fixed;transition:bottom 0.3s ease,right 0.3s ease,opacity 0.3s ease,transform 0.3s ease;bottom:-10px;right:-10px;opacity:0;z-index:-1;display:flex;flex-direction:column;gap:14px;padding:14px;transform:scale(0);}
