--- a/html/components/component_button.html
+++ b/html/components/component_button.html
@@ -128,7 +128,7 @@
 			<hr>
 
 			<h2>CTA <span>FAB</span></h2>
-			<div class="guide-column-list">
+			<div class="guide-column-list a-start">
 				<button type="button" class="fab fab-primary fab-square" aria-label="더보기"><i class="ico-add"></i></button>
 				<button type="button" class="fab fab-primary fab-square" aria-label="일정 추가"><i class="ico-calendar"></i></button>
 				<button type="button" class="fab fab-secondary fab-circle" aria-label="일정 검색"><i class="ico-search bg-icon-default"></i></button>
