--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -974,6 +974,33 @@
 					<i class="icon-only icon-12 icon-nobook bg-icon-gray_1"></i>
 				</div>
 			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-sound</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-18 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-15 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-sound bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-sound bg-icon-gray_1"></i>
+				</div>
+			</div>
+			<hr>
+			<div class="ui-guide-box">
+				<h2>icon-sound-effect</h2>
+				<div class="guide-column-list">
+					<i class="icon-only icon-48 icon-sound-effect-1 bg-icon-gray_1"></i>
+					<i class="icon-only icon-48 icon-sound-effect-2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-48 icon-sound-effect-3 bg-icon-gray_1"></i>
+				</div>
+			</div>
 		</div>
 	</div>
 </body>
