--- a/resources/css/ui-layout.css
+++ b/resources/css/ui-layout.css
@@ -385,48 +385,22 @@ main .main-inner {flex:1 1 calc(100% - 52px);display:flex;}
 .content .bottom-btn .btn-wrap {padding:12px 16px;}
 .content .bottom-btn .btn-wrap.btn-nowrap {padding:8px 16px;}
 
-.financial-player {background-color:rgba(31, 40, 54, 0.95);border-radius:31px;padding:8px 16px;display:flex;align-items:center;justify-content:space-between;margin:0 13px 16px;}
-.financial-player-title {display:flex;gap:8px;align-items:center;justify-content:center;}
-.financial-player-title strong {font-size:18px;font-weight:700;color:var(--typography-white);line-height:1;}
-.financial-player-controller {display:flex;gap:10px;align-items:center;justify-content:center;}
-.financial-player-controller button {display:flex;flex:0 0 46px;width:46px;height:46px;align-items:center;justify-content:center;}
-.financial-player .soundwave-container {flex:0 0 16px;width:16px;height:16px;display:flex;align-items:flex-end;justify-content:space-between;gap:3px;padding:1px 2px;}
+.financial-player {background-color:rgba(31, 40, 54, 0.95);border-radius:16px;padding:8px 8px 8px 16px;margin:0px 8px 8px;}
+.financial-player-top {display:flex;align-items:center;justify-content:space-between;}
 
-.financial-player .soundwave-container .bar {width:2px;background:var(--white-24);border-radius:2px;}
-.financial-player.is-playing .soundwave-container .bar {animation:equalizer 1.9s steps(20, end) infinite;height:100%;background-color:var(--icon-white);}
-.financial-player .bar:nth-child(1) {height:7px;}
-.financial-player .bar:nth-child(2) {height:10px;}
-.financial-player .bar:nth-child(3) {height:14px;}
-.financial-player.is-playing .bar:nth-child(1) {animation-duration:1.9s;}
-.financial-player.is-playing .bar:nth-child(2) {animation-duration:2.0s;}
-.financial-player.is-playing .bar:nth-child(3) {animation-duration:1.7s;}
-@keyframes equalizer {
-    0% {height:60%;}
-    4% {height:50%;}
-    8% {height:40%;}
-    12% {height:30%;}
-    16% {height:20%;}
-    20% {height:30%;}
-    24% {height:40%;}
-    28% {height:10%;}
-    32% {height:40%;}
-    36% {height:60%;}
-    40% {height:20%;}
-    44% {height:40%;}
-    48% {height:70%;}
-    52% {height:30%;}
-    56% {height:10%;}
-    60% {height:30%;}
-    64% {height:50%;}
-    68% {height:60%;}
-    72% {height:70%;}
-    76% {height:80%;}
-    80% {height:70%;}
-    84% {height:60%;}
-    88% {height:50%;}
-    92% {height:60%;}
-    96% {height:70%;}
-    100% {height:80%;}
+.financial-player-title {display:flex;gap:8px;align-items:center;justify-content:center;}
+.financial-player-controller {display:flex;gap:8px;align-items:center;justify-content:center;}
+.financial-player-controller button {display:flex;flex:0 0 46px;width:46px;height:46px;align-items:center;justify-content:center;}
+.financial-player-bottom {padding:6px 0;}
+.financial-player-bottom p {font-size:15px;font-weight:400;color:var(--white-72);line-height:1;white-space:nowrap;overflow:hidden;text-overflow:ellipsis;}
+.financial-player.is-playing .icon-wrap i:nth-child(2) {animation:opacity 1s linear infinite;}
+.financial-player.is-playing .icon-wrap i:nth-child(3) {animation:opacity 1s linear infinite;animation-delay:0.3s;}
+.financial-player.is-playing .icon-wrap i:nth-child(4) {animation:opacity 1s linear infinite;animation-delay:0.6s;}
+
+@keyframes opacity {
+    0% {opacity:0;}
+    50% {opacity:0.9}
+    100% {opacity:1;}
 }
 
 .modal__footer .financial-player {display:inline-flex;gap:16px;}
