--- a/html/components/component_icon.html
+++ b/html/components/component_icon.html
@@ -527,18 +527,18 @@
 			<div class="ui-guide-box">
 				<h2>icon-calendar</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-36 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-32 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-28 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-26 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-24 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-20 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-18 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-16 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-15 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-14 icon-calendar bg-red-500"></i>
-					<i class="icon-only icon-12 icon-calendar bg-red-500"></i>
+					<i class="icon-only icon-48 icon-calendar"></i>
+					<i class="icon-only icon-36 icon-calendar"></i>
+					<i class="icon-only icon-32 icon-calendar"></i>
+					<i class="icon-only icon-28 icon-calendar"></i>
+					<i class="icon-only icon-26 icon-calendar"></i>
+					<i class="icon-only icon-24 icon-calendar"></i>
+					<i class="icon-only icon-20 icon-calendar"></i>
+					<i class="icon-only icon-18 icon-calendar"></i>
+					<i class="icon-only icon-16 icon-calendar"></i>
+					<i class="icon-only icon-15 icon-calendar"></i>
+					<i class="icon-only icon-14 icon-calendar"></i>
+					<i class="icon-only icon-12 icon-calendar"></i>
 				</div>
 			</div>
 			<hr>
@@ -994,11 +994,20 @@
 			</div>
 			<hr>
 			<div class="ui-guide-box">
-				<h2>icon-sound-effect</h2>
+				<h2>icon-sound2</h2>
 				<div class="guide-column-list">
-					<i class="icon-only icon-48 icon-sound-effect-1 bg-icon-gray_1"></i>
-					<i class="icon-only icon-48 icon-sound-effect-2 bg-icon-gray_1"></i>
-					<i class="icon-only icon-48 icon-sound-effect-3 bg-icon-gray_1"></i>
+					<i class="icon-only icon-48 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-36 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-32 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-28 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-26 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-24 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-20 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-18 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-16 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-15 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-14 icon-sound2 bg-icon-gray_1"></i>
+					<i class="icon-only icon-12 icon-sound2 bg-icon-gray_1"></i>
 				</div>
 			</div>
 		</div>
